fix header elements height issue on IE8
1. IE8 users should mostly use smaller screen
2. set default `font-size` to `18px`
3. fix queries at `1024px`

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -32,7 +32,7 @@ $mono: menlo, 'Source Code Pro', Consolas, Courier, monospace;
 // Modular Scale & Vertical Rhythm
 $font-size-base: 18px;
 $font-size-base-for-desk: 22px;
-$font-size-base-old-ie: $font-size-base-for-desk;
+$font-size-base-old-ie: $font-size-base;
 $baseline: 1.5rem;
 
 // Grid
