--- a/css/old-ie.scss
+++ b/css/old-ie.scss
@@ -3,6 +3,6 @@
 ---
 
 $old-ie: true;
-$fix-queries-at: 1200px;
+$fix-queries-at: 1024px;
 
 @import "main";
